2006-07-16  Funda Wang  <fundawang@linux.net.cn>

	* translation-status.xml: There is no more ggv module.

2006-07-12  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-menus has been branched.

2006-07-12  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added NetworkManager-pptp and
	NetworkManager-vpnc to extras.

2006-07-06  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added istanbul to extras.

2006-06-27  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added pitivi to extras.

2006-06-26  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added gimmie to extras.

2006-06-20  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: file-roller has been
	branched for gnome-2-14.

2006-06-19  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-system-monitor has been
	branched for gnome-2-14.

2006-06-18  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: atk and at-spi have been
	branched for gnome-2-14.

2006-06-16  Vincent van Adrighem  <adrighem@gnome.org>

	* translation-status.xml: Bug-buddy silently branched gor gnome-2-14.

2006-06-12  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Moved alacarte, orca,
	gnome-power-manager, and tomboy to proposed.

2006-06-11  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added alacarte to extras.

2006-06-11  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gok has been (silently)
	branched for gnome-2-14.

2006-06-10  Funda Wang  <fundawang@linux.net.cn>

	* translation-status.xml: Corrected ekiga's POT name.

2006-06-05  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added lsr to extras.

2006-06-04  Funda Wang  <fundawang@linux.net.cn>

	* translation-status.xml: gedit-plugins lives again.

2006-06-04  Funda Wang  <fundawang@linux.net.cn>
