@@ -1415,6 +1415,17 @@
       </component>
     </version>
   </module>
+  <module name="gnome-mount">
+    <version release="HEAD">
+      <component name="gnome-mount" dir="gnome-mount" group="extras">
+        <podir dir="po"/>
+        <potname name="gnome-mount.pot"/>
+        <branch name="HEAD"/>
+        <regenerate/>
+        <download/>
+      </component>
+    </version>
+  </module>
   <module name="gnome-netstatus">
     <version release="gnome-2.14">
       <component name="gnome-netstatus" dir="gnome-netstatus" group="desktop">
