@@ -1,3 +1,7 @@
+2006-07-19  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Added gnome-mount to extras.
+
 2006-07-16  Funda Wang  <fundawang@linux.net.cn>
 
 	* translation-status.xml: There is no more ggv module.
